@@ -1,3 +1,7 @@
+RN-2007-09-20-0: Enhancem.: Added new test for authuser binary (in utilbin)
+                 Issue:     2194 
+                 Review:    JG
+
 RH-2007-09-20-0: Enhancem.: Connections over ssh with password implemented
                  Review:    JG
 
